--- a/Week 3/Project/Notebook/Project 3-completed.ipynb
+++ b/Week 3/Project/Notebook/Project 3-completed.ipynb
@@ -760,7 +760,8 @@
    "cell_type": "code",
    "execution_count": 382,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1111,8 +1112,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "#2015 Q1\n",
     "df2.sort_values(by = [\"Store Number\", \"Date\"], inplace = True)\n",
@@ -1129,9 +1134,10 @@
     "                   \"City\": lambda x: x.iloc[0],\n",
     "                   \"County Number\": lambda x: x.iloc[0]})\n",
     "salesQ12015.columns = [' '.join(col).strip() for col in salesQ12015.columns.values]\n",
-    "salesQ12015.columns = [\"Store_Number\", \"City\", \"2015Q1_Sales_Sum\", \"2015Q1_Sales_Mean\", \"County_Number\", \n",
-    "                     \"Zip_Code\", \"2015Q1_Profit_Mean\", \"2015Q1_Volume Sold_liters_Sum\", \"2015Q1_Price_per_Liter_Mean\", \n",
-    "                     \"2015Q1_Volume_Sold_liters_Mean\"]\n",
+    "salesQ12015.columns = [\"Store_Number\", \"City\", \"2015Q1_Sales_Sum\", \"2015Q1_Sales_Mean\",\n",
+    "                       \"County_Number\", \"Zip_Code\", \"2015Q1_Profit_Mean\", \n",
+    "                       \"2015Q1_Volume Sold_liters_Sum\", \"2015Q1_Price_per_Liter_Mean\", \n",
+    "                       \"2015Q1_Volume_Sold_liters_Mean\"]\n",
     "salesQ12015.head()"
    ]
   },
