--- a/Week 3/Project/Notebook/Project 3-wip.ipynb
+++ b/Week 3/Project/Notebook/Project 3-wip.ipynb
@@ -2561,6 +2561,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
