--- a/Capstone/starterCode/CAPSTONE - wip.ipynb
+++ b/Capstone/starterCode/CAPSTONE - wip.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 117,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
@@ -129,13 +129,35 @@
        "4  Afghanistan  1950       0        0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "coup.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9463, 4)"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coup.shape"
    ]
   },
   {
@@ -152,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 121,
    "metadata": {
     "collapsed": true
    },
@@ -163,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false
    },
@@ -262,7 +284,7 @@
        "4            0            0  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 123,
    "metadata": {
     "collapsed": true
    },
@@ -300,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false
    },
@@ -398,7 +420,7 @@
        "4  Afghanistan  1944     0       NaN      0      8      -8     -8.0      NaN"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 125,
    "metadata": {
     "collapsed": true
    },
@@ -450,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 126,
    "metadata": {
     "collapsed": false
    },
@@ -630,7 +652,7 @@
        "[5 rows x 57 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +670,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 127,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "Col1 = urban.columns[0]\n",
+    "Col2 = urban.columns[1:].tolist()\n",
+    "urban1 = pd.melt(urban, id_vars=(Col1), var_name=\"Year\", value_vars=(Col2), value_name=\"UrbanPop\")\n",
+    "urban1.sort_values([\"Country Name\", \"Year\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>UrbanPop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>8.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1961</td>\n",
+       "      <td>8.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>526</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1962</td>\n",
+       "      <td>8.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>788</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1963</td>\n",
+       "      <td>9.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1050</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1964</td>\n",
+       "      <td>9.43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Country Name  Year  UrbanPop\n",
+       "2     Afghanistan  1960      8.22\n",
+       "264   Afghanistan  1961      8.51\n",
+       "526   Afghanistan  1962      8.81\n",
+       "788   Afghanistan  1963      9.11\n",
+       "1050  Afghanistan  1964      9.43"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "urban1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
    "metadata": {
     "collapsed": true
    },
@@ -659,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 130,
    "metadata": {
     "collapsed": false
    },
@@ -846,7 +955,7 @@
        "[5 rows x 48 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,6 +969,329 @@
    "metadata": {},
    "source": [
     "The gdp table shows the real per capita GDP of each country from 1969 to 2015."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Col3 = gdp.columns[0]\n",
+    "Col4 = gdp.columns[1:].tolist()\n",
+    "gdp1 = pd.melt(gdp, id_vars=(Col3), var_name=\"Year\", value_vars=(Col4), value_name=\"GDPpercap\")\n",
+    "gdp1.sort_values([\"Country Name\", \"Year\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>GDPpercap</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1969</td>\n",
+       "      <td>$283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>$287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>380</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>$291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>570</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>$294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>760</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1973</td>\n",
+       "      <td>$297</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Country Name  Year GDPpercap\n",
+       "0    Afghanistan  1969      $283\n",
+       "190  Afghanistan  1970      $287\n",
+       "380  Afghanistan  1971      $291\n",
+       "570  Afghanistan  1972      $294\n",
+       "760  Afghanistan  1973      $297"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "gdp1['GDPpercap'] = gdp1['GDPpercap'].str.replace('$', '')\n",
+    "gdp1['GDPpercap'] = gdp1['GDPpercap'].str.replace(',', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Lola/anaconda/lib/python2.7/site-packages/ipykernel/__main__.py:1: FutureWarning: convert_objects is deprecated.  Use the data-type specific converters pd.to_datetime, pd.to_timedelta and pd.to_numeric.\n",
+      "  if __name__ == '__main__':\n"
+     ]
+    }
+   ],
+   "source": [
+    "gdp1['GDPpercap'] = gdp1['GDPpercap'].convert_objects(convert_numeric=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country Name     object\n",
+       "Year             object\n",
+       "GDPpercap       float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp1.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>GDPpercap</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1969</td>\n",
+       "      <td>283.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>287.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>380</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>291.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>570</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>294.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>760</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1973</td>\n",
+       "      <td>297.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Country Name  Year  GDPpercap\n",
+       "0    Afghanistan  1969      283.0\n",
+       "190  Afghanistan  1970      287.0\n",
+       "380  Afghanistan  1971      291.0\n",
+       "570  Afghanistan  1972      294.0\n",
+       "760  Afghanistan  1973      297.0"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "leaders = pd.read_csv(\"../assets/csv/leaders.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>year</th>\n",
+       "      <th>years in power</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1946</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1947</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1948</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1949</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       country  year  years in power \n",
+       "0  Afghanistan  1946             13.0\n",
+       "1  Afghanistan  1947             14.0\n",
+       "2  Afghanistan  1948             15.0\n",
+       "3  Afghanistan  1949             16.0\n",
+       "4  Afghanistan  1950             17.0"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "leaders.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "leaders.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "leaders[[\"country\"] == \"Afghanistan\"]"
    ]
   },
   {
