--- a/Projects/Week 4/Notebook/Project 4 - Completed.ipynb
+++ b/Projects/Week 4/Notebook/Project 4 - Completed.ipynb
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1306,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -822,103 +822,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1307,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimization terminated successfully.\n",
-      "         Current function value: 0.617467\n",
-      "         Iterations 5\n"
+     "ename": "NameError",
+     "evalue": "name 'y' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-efee9afe8bd4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Logit regression using our entire data:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mlogit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLogit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlogit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'y' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"simpletable\">\n",
-       "<caption>Logit Regression Results</caption>\n",
-       "<tr>\n",
-       "  <th>Dep. Variable:</th>      <td>Salary</td>      <th>  No. Observations:  </th>  <td>  1244</td>  \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Model:</th>               <td>Logit</td>      <th>  Df Residuals:      </th>  <td>  1237</td>  \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Method:</th>               <td>MLE</td>       <th>  Df Model:          </th>  <td>     6</td>  \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Date:</th>          <td>Thu, 30 Jun 2016</td> <th>  Pseudo R-squ.:     </th>  <td>0.08733</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Time:</th>              <td>21:16:08</td>     <th>  Log-Likelihood:    </th> <td> -768.13</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>converged:</th>           <td>True</td>       <th>  LL-Null:           </th> <td> -841.63</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th> </th>                      <td> </td>        <th>  LLR p-value:       </th> <td>3.324e-29</td>\n",
-       "</tr>\n",
-       "</table>\n",
-       "<table class=\"simpletable\">\n",
-       "<tr>\n",
-       "        <td></td>           <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th> <th>[95.0% Conf. Int.]</th> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Atlanta</th>       <td>   -1.6381</td> <td>    0.228</td> <td>   -7.171</td> <td> 0.000</td> <td>   -2.086    -1.190</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Austin</th>        <td>   -1.8786</td> <td>    0.232</td> <td>   -8.094</td> <td> 0.000</td> <td>   -2.333    -1.424</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Chicago</th>       <td>   -0.8806</td> <td>    0.187</td> <td>   -4.708</td> <td> 0.000</td> <td>   -1.247    -0.514</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Intercept</th>     <td>    0.3853</td> <td>    0.120</td> <td>    3.215</td> <td> 0.001</td> <td>    0.150     0.620</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Los Angeles</th>   <td>   -1.3467</td> <td>    0.260</td> <td>   -5.182</td> <td> 0.000</td> <td>   -1.856    -0.837</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>San Francisco</th> <td>    0.0125</td> <td>    0.183</td> <td>    0.069</td> <td> 0.945</td> <td>   -0.345     0.371</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Washington</th>    <td>   -1.1182</td> <td>    0.233</td> <td>   -4.795</td> <td> 0.000</td> <td>   -1.575    -0.661</td>\n",
-       "</tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<class 'statsmodels.iolib.summary.Summary'>\n",
-       "\"\"\"\n",
-       "                           Logit Regression Results                           \n",
-       "==============================================================================\n",
-       "Dep. Variable:                 Salary   No. Observations:                 1244\n",
-       "Model:                          Logit   Df Residuals:                     1237\n",
-       "Method:                           MLE   Df Model:                            6\n",
-       "Date:                Thu, 30 Jun 2016   Pseudo R-squ.:                 0.08733\n",
-       "Time:                        21:16:08   Log-Likelihood:                -768.13\n",
-       "converged:                       True   LL-Null:                       -841.63\n",
-       "                                        LLR p-value:                 3.324e-29\n",
-       "=================================================================================\n",
-       "                    coef    std err          z      P>|z|      [95.0% Conf. Int.]\n",
-       "---------------------------------------------------------------------------------\n",
-       "Atlanta          -1.6381      0.228     -7.171      0.000        -2.086    -1.190\n",
-       "Austin           -1.8786      0.232     -8.094      0.000        -2.333    -1.424\n",
-       "Chicago          -0.8806      0.187     -4.708      0.000        -1.247    -0.514\n",
-       "Intercept         0.3853      0.120      3.215      0.001         0.150     0.620\n",
-       "Los Angeles      -1.3467      0.260     -5.182      0.000        -1.856    -0.837\n",
-       "San Francisco     0.0125      0.183      0.069      0.945        -0.345     0.371\n",
-       "Washington       -1.1182      0.233     -4.795      0.000        -1.575    -0.661\n",
-       "=================================================================================\n",
-       "\"\"\""
-      ]
-     },
-     "execution_count": 1307,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2031,6 +1949,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
